--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -8,6 +8,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-sidebar-active: var(--sidebar-active);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -47,12 +48,12 @@
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.129 0.042 264.695);
-  --card: oklch(1 0 0);
+  --card: oklch(98.5% 0.002 247.839);
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
-  --primary: oklch(0.208 0.042 265.755);
-  --primary-foreground: oklch(0.984 0.003 247.858);
+  --primary: oklch(98.5% 0.002 247.839);
+  --primary-foreground: oklch(0.208 0.042 265.755);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
   --muted: oklch(0.968 0.007 247.896);
@@ -60,7 +61,7 @@
   --accent: oklch(0.968 0.007 247.896);
   --accent-foreground: oklch(0.208 0.042 265.755);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.929 0.013 255.508);
+  --border: oklch(92.8% 0.006 264.531);
   --input: oklch(0.929 0.013 255.508);
   --ring: oklch(0.704 0.04 256.788);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -76,6 +77,7 @@
   --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
+  --sidebar-active: oklch(94.194% 0.00638 255.743);
 }
 
 .dark {
@@ -119,4 +121,29 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@font-face {
+  font-family: 'NanumSquareNeoLight';
+  src: url('../app/style/fonts/NanumSquareNeo-aLt.ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquareNeo';
+  src: url('../app/style/fonts/NanumSquareNeo-bRg.ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquareNeoBold';
+  src: url('../app/style/fonts/NanumSquareNeo-cBd.ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquareNeoExtraBold';
+  src: url('../app/style/fonts/NanumSquareNeo-dEb.ttf');
+}
+
+@font-face {
+  font-family: 'NanumSquareNeoHeavy';
+  src: url('../app/style/fonts/NanumSquareNeo-eHv.ttf');
 }
